<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_add_drink">Add Drink</string>
    <string name="action_add_beverage">Add Beverage</string>
    <string name="action_bluetooth_device">Bluetooth Devices</string>

    <!-- NavBar Strings -->
    <string name="title_drinks">Drinks</string>
    <string name="title_bottles">Bottles</string>
    <string name="title_beverages">Beverages</string>
    <string name="title_developer_control">Developer Control</string>
    <string name="title_activity_add_drink">Add Drink</string>
    <string name="title_activity_add_beverage">Add Beverage</string>
    <string name="title_activity_bluetooth_device_list">Bluetooth Devices</string>
    <string name="title_cmd_location">Location Command</string>
    <string name="title_cmd_pour">Pour Command</string>
    <string name="title_cmd_stop">Stop Command</string>
    <string name="title_cmd_status">Status Command</string>

    <!-- Text Strings -->
    <string name="text_name">Name</string>
    <string name="text_beverage_name">Name</string>
    <string name="text_beverage_type">Type</string>
    <string name="text_paired_devices">Paired Devices</string>
    <string name="text_new_devices">New Devices</string>
    <string name="text_blank_content">No Bluetooth device is currently paired with the app. Please go to settings and pair with the desired Bluetooth device.</string>
    <string name="text_drink_name">Drink Name</string>
    <string name="text_beverage">Beverage</string>
    <string name="text_type">Type</string>
    <string name="text_location">Location</string>
    <string name="text_pour">Pour</string>
    <string name="text_default_status">No Status</string>

    <!-- Label Strings -->
    <string name="text_status">Status: </string>
    <string name="text_slot">Slot: </string>

    <!-- Button Strings -->
    <string name="button_add_drink">Add Drink</string>
    <string name="button_add_beverage">Add Beverage</string>
    <string name="button_update_beverage">Update Beverage</string>
    <string name="button_scan">Scan</string>
    <string name="button_order">Order</string>
    <string name="button_add_ingredient">Add Ingredient</string>
    <string name="button_pour">Pour</string>
    <string name="button_stop">Stop</string>
    <string name="button_status">Status</string>
    <string name="button_save">Save</string>
    <string name="app_name">Bartender</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_drink_info">Drink Information</string>
    <string name="title_activity_add_bottle">AddBottleActivity</string>

</resources>