<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/text_paired_devices"
        android:visibility="visible" >
    </TextView>

    <ListView
        android:id="@+id/list_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10" >
    </ListView>

    <TextView
        android:id="@+id/text_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/text_new_devices"
        android:visibility="visible" >
    </TextView>

    <ListView
        android:id="@+id/list_new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
		android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/text_status"
            android:visibility="visible" >
        </TextView>

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:visibility="visible" >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan" >
    </Button>

</LinearLayout>